--- a/go/pom.xml
+++ b/go/pom.xml
@@ -53,6 +53,12 @@
 			<artifactId>javax.json</artifactId>
 			<version>1.1.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.16.0</version> <!-- Use the latest version available -->
+		</dependency>
 	</dependencies>
 
 	<build>
